--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "axios": "^0.19.2",
+    "date-fns": "^2.15.0",
     "immer": "^7.0.5",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
